--- a/index.html
+++ b/index.html
@@ -6,26 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Digendra's Personal Site</title>
+<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="/css/master.css">
+
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td><img src="Digendra_pic.png" alt="Digendra circle top pic"></td>
-      <td><h1>Digendra Singh</h1>
-      <p><em>Team Lead at <strong><a href="https://www.empaxis.com/">Empaxis Data Management</a></strong></em></p>
-      <p><em>I am <strong>RPA Developer.</strong></em></p>
-</td>
+      <td>
+        <h1>Digendra Singh</h1>
+        <p><em>Team Lead at <strong><a href="https://www.empaxis.com/">Empaxis Data Management</a></strong></em></p>
+        <p><em>I am <strong>RPA Developer.</strong></em></p>
+      </td>
     </tr>
   </table>
   <!--<img src="https://media-exp1.licdn.com/dms/image/C4E03AQFqKWlGo-tHNA/profile-displayphoto-shrink_200_200/0?e=1588809600&v=beta&t=vT-TWMygMSVoBGQ9_OgzlYrbzaANswvIRzMZhGA0XGo" alt="Digendra profile picture">-->
-
-    <hr />
+  <hr />
   <h3>Education</h3>
   <ul>
     <li>B.Tech in CSE</li>
     <li>
-      Intermediate  from ISC
+      Intermediate from ISC
     </li>
     <li>
       Secondary school from ICSE
